# hb-audit-reviewer-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
reports/: btc-hardfork-enhancement-update_20250328_123046.md  dinero-strategies-v1_20250328_123744.md  mintify-mint-token_20250328_122622.md  onyx-governance-3440f2_20250328_125638.md  proof-of-creativity-protocol-periphery-contracts_20250328_124840.md  sidekick-contracts_20250328_124349.md  ssp-wallet-relay-and-key_20250328_133113.md  the-vault---directed-stake-program-fbc4ff_20250328_125402.md  treasury-vesting_20250328_125111.md
src/agents/: __init__.py  schemas.py
src/agents/audit_quality_checker/: __init__.py  audit_quality_checker.py
src/agents/review_report_builder/: __init__.py  review_report_builder.py
src/agents/syntax_scout/: __init__.py  syntax_scout.py
src/agents/web_scraper/: __init__.py  web_scraper.py
src/cli/: commands.py  parser.py
src/core/: analyzer.py  report.py
src/database/: engine.py  enums.py  session.py
src/database/crud/: __init__.py  base.py  review.py  review_step.py
src/database/models/: review.py  review_step.py
src/utils/: __init__.py  file_utils.py  get_langchain_llm.py
