[project]
name = "hb-audit-reviewer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.47",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
]
